sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:13: error: Int(1) does not take parameters
while(i<getNombreValeurs-1())
                          ^